# rust-cmmc

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README
env/: setup.sh
get-pos-derive/: Cargo.toml
get-pos-derive/src/: lib.rs
src/: ast.rs  cmm.grammar  cmm.pest  error.rs  ir.rs  lex.rs  main.rs  name.rs  parse.rs  parse.rs.bak  peg.rs  stdcminusminus.c  type_check.rs  x64.rs
src/name/: symbol.rs
src/parse/: unparse.rs
test/: all_nodes.cmm  all_nodes_name.cmm  all_nodesu.cmm  kam.cmm  keywords.cmm  lexical.cmm  nums.cmm  prog1.cmm  prog1u.cmm  prog2.cmm  prog2u.cmm  prog3.cmm  prog4.cmm  prog5.cmm  prog6.cmm  prog6u.cmm  prog7.cmm  prog7u.cmm  prog8.cmm  tokens.cmm  tokens2.cmm  tokens3.cmm
test/3ac/: 01_fn_quad.cmm  02_return quad.cmm  02_return_quad.cmm  03_assign_quad.cmm  04_unary_op_quad.cmm  05_binary_op_quad.cmm  06_conditional_quad.cmm  07_loop_quad.cmm  08_call_quad.cmm  09_read_write_quad.cmm  test.cmm
test/name/: name_error_1.cmm  name_error_1.err.expected  name_error_2.cmm  name_error_2.err.expected  no_shadowing.cmm  type_error_1.cmm  type_error_2.cmm  type_error_3.cmm  type_error_4.cmm  with_shadowing.cmm  with_shadowing_2.cmm  with_shadowing_3.cmm
test/type/: 10_arith_operand_err.cmm  11_arith_operator_err.cmm  12_relational_operand_err.cmm  13_logical_operand_err.cmm  14_non_bool_if_err.cmm  15_non_bool_while_err.cmm  16_err_invalid_equality_operand.cmm  17_err_invalid_assignment_operand.cmm  18_err_invalid_assignment_operation.cmm  19_write_raw_ptr.cmm  1_err_write_fn.cmm  20_read_raw_pointer.cmm  21_invalid_deref.cmm  test.cmm  (+8 more)
(+9 files in other folders)
