[package]
name = "cmmc"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
argh = "0.1.7"
enum_dispatch = "0.3.8"
get-pos-derive = { path = "get-pos-derive" }

